--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
 	background-color: #563d7c;
 	color : white;
 	margin-top: 15px;
+	height: 220px;
 }
 
 #logo1{
@@ -59,6 +60,11 @@
 
 #share2{
 	padding-bottom: 20px;
+}
+
+#img1,#img2{
+	width: 100%;
+	height: auto;
 }
 
 
